# ailm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.tr.md  ROADMAP.md  VISION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ailm/: __init__.py  __main__.py  app.py
ailm/config/: __init__.py  loader.py  schema.py
ailm/core/: __init__.py  actions.py  bus.py  crash.py  dedup.py  logging.py  models.py  ringlog.py  status.py  trend.py
ailm/db/: __init__.py  connection.py  repository.py  schema.sql
ailm/distro/: __init__.py  arch.py  protocols.py
ailm/hooks/: __init__.py  builtin.py  manager.py  specs.py
ailm/llm/: __init__.py  batch.py  client.py  evidence.py  prompts.py  queue.py
ailm/scheduler/: __init__.py  briefing.py  engine.py
ailm/sources/: __init__.py  base.py  btrfs.py  coredump.py  disk.py  docker.py  external.py  hwmon.py  journald.py  metrics.py  network.py  nvidia.py  orphan.py  pacman.py  pacnew.py  pressure.py  reboot.py  security.py  services.py  smart.py  (+2 more)
contrib/: ailm-control.py  ailm.service
docs/: architecture.md  hooks.md  investigation-pipeline.md  memory-system.md  research-context.md
reports/: daily-analysis-20260328.md  daily-analysis-20260401.md  daily-analysis-20260403.md  daily-analysis-20260414.md
tests/: conftest.py  test_actions.py  test_app.py  test_bus.py  test_config.py  test_crash.py  test_db.py  test_dedup.py  test_edge_cases.py  test_evidence.py  test_hooks.py  test_integration.py  test_llm.py  test_ringlog.py  test_scheduler.py  test_stress.py  test_trend.py
(+16 files in other folders)
